fix: 이웃 신청 확인 API